force-app/main/default/objects/Account/fields/AShastakovich_checkbox__c.field-meta.xml
<CustomField>
    <fullName>AShastakovich_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AShastakovich checkbox</label>
    <type>Checkbox</type>
</CustomField>