force-app/main/default/objects/Account/fields/New_Field_AShastakovich__c.field-meta.xml
<CustomField>
    <fullName>New_Field_AShastakovich__c</fullName>
    <label>New Field AShastakovich</label>
    <type>Phone</type>
</CustomField>