force-app/main/default/objects/Account/fields/Test_Field_Josh__c.field-meta.xml
<CustomField>
    <fullName>Test_Field_Josh__c</fullName>
    <description>Hello world!</description>
    <label>Test Field Josh</label>
    <type>Time</type>
</CustomField>