force-app/main/default/objects/Account/fields/Test_field_Josh_S__c.field-meta.xml
<CustomField>
    <fullName>Test_field_Josh_S__c</fullName>
    <label>Test field Josh S</label>
    <type>Date</type>
</CustomField>